# ucsd-nlp-mgta415-summer2024-final-group-project-final-project-robo-advisor

./: Makefile  README.md  env_template  pyproject.toml
docker/: Dockerfile  docker-compose.yml
