[tool.poetry]
name = "mgta415-fp-robo-advisor"
version = "0.0.0"
description = "MGTA 415 Final Project - Robo Advisor"
authors = ["Allison Wu <alw050@ucsd.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
requests = "^2.31.0"
jupyterlab = "^4.2.0"
nltk = "^3.8.1"
spacy = "^3.7.4"
textblob = "^0.18.0.post0"
transformers = "^4.42.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"